# beangrid

./: README.md  pyproject.toml  run_server.py  sample_workbook.yaml
beangrid/: deps.py  main.py
beangrid/core/: ast.py  config.py  evaluator.py  parser.py  processor.py  yaml_processor.py
beangrid/scheme/: cell.py
beangrid/static/: app.js  styles.css
beangrid/templates/: base.html  home.html
beangrid/views/: api.py  home.py
examples/: sample_workbook.yaml  yaml_example.py
tests/: test_parser.py  test_processor.py  test_yaml_processor.py
tests/fixtures/: cross_sheet_references.yaml  function_tests.yaml  multi_sheet_workbook.yaml  sample_workbook.yaml  simple_calculations.yaml
